2004-08-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.h,
	* src/SDCCsymt.c (changePointer, checkDecl, addSymChain): changed
	parameter of changePointer() from symbol* to sym_link*
	* src/SDCCast.c (decorateType): call changePointer() for CAST op
	* src/SDCCsymt.c (compareType): void* type is castable to other
	pointers, but not necesarily an exact match.
	* src/SDCCicode.c (geniCodeCast): allow void* casting here since it
	is no longer blindly treated as an exact match.
	* src/SDCCval.c (valCastLiteral): treat missing type as cast to void

2004-08-12 Slade Rich <slade_rich AT users.sourceforge.net>

	* src/pic/glue.c: Added struct initialisation fn printIvalStruct.

2004-08-11 Slade Rich <slade_rich AT users.sourceforge.net>

	* src/pic/gen.c,
	* src/pic/pcode.c,
	* src/pic/ralloc.h,
	* src/pic/ralloc.c: Printing rIdx on internal verbose debug.

2004-08-10 Slade Rich <slade_rich AT users.sourceforge.net>

	* src/pic/device.c,
	* src/pic/device.h,
	* src/pic/device.c: Will no longer exit if #pragma maxram has not been defined.

2004-08-06 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/gen.c (emitcode): fixed bug #992819

2004-08-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/pic/ralloc.c (deassignLR): allthough pic port is buggy already,
	  there's no need to make it worse

2004-08-05 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/ralloc.c (deassignLR),
	* src/ds390/ralloc.c (deassignLR),
	* src/hc08/ralloc.c (deassignLR),
	* src/z80/ralloc.c (deassignLR),
	* src/pic/ralloc.c (deassignLR),
	* src/pic16/ralloc.c (deassignLR),
	* src/avr/ralloc.c (deassignLR),
	* src/SDCClrange.c (findRecursiveSucc, findRecursivePred, findPrevUse,
	rlivePoint): fixed another part of bug #971834

2004-08-04 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/z80/main.c: enabled "critical" keyword
	* src/z80/mappings.i,
	* src/z80/gen.c (genFunction, genEndFunction): support for interrupt